# aria

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
eval/: README.md  golden_dataset.json  run_eval.py
scripts/: inspect_chunks.py  patch_doc_family.py
src/aria_rag/: __init__.py  api.py  cli.py  config.py  eval.py  indexer.py  llm.py  loader.py  query_expansion.py  retriever.py
