[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-rag"
version = "0.1.0"
description = "Starter RAG project for the ARIA document corpus."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.30.0",
  "anthropic>=0.40.0",
  "pypdf>=4.2.0",
  "python-dotenv>=1.0.1",
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
eval = [
  "tabulate>=0.9.0",
]

[project.scripts]
aria-rag = "aria_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
